--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
 		"pestphp/pest": "^1.7",
 		"php-http/mock-client": "^1.4",
 		"php-http/message": "^1.11",
-		"guzzlehttp/psr7": "^1.8"
+		"guzzlehttp/psr7": "^1.8",
+		"friendsofphp/php-cs-fixer": "^3.0"
 	}
 }
